# Q3_25_Builder_unknown_anything

./: README.md
anchor-amm/: Anchor.toml
anchor-amm/programs/anchor-amm/: Cargo.toml
anchor-amm/programs/anchor-amm/src/: error.rs  lib.rs
anchor-amm/programs/anchor-amm/src/instructions/: deposit.rs  initialize.rs  mod.rs  swap.rs  withdraw.rs
anchor-amm/programs/anchor-amm/src/state/: config.rs
anchor_dice_game/: Anchor.toml  pnpm-lock.yaml
anchor_dice_game/programs/anchor_dice_game/: Cargo.toml
anchor_dice_game/programs/anchor_dice_game/src/: lib.rs
anchor_dice_game/programs/anchor_dice_game/src/instructions/: initialize.rs  mod.rs  place_bet.rs  refund_bet.rs  resolve_bet.rs
anchor_dice_game/tests/: anchor_dice_game.ts
anchor_escrow/: Anchor.toml  package.json  pnpm-lock.yaml
anchor_escrow/programs/anchor_escrow/: Cargo.toml
anchor_escrow/programs/anchor_escrow/src/: lib.rs
anchor_escrow/tests/: anchor_escrow.ts
anchor_quadratic_voting/: Anchor.toml
anchor_quadratic_voting/programs/anchor_quadratic_voting/: Cargo.toml
anchor_quadratic_voting/programs/anchor_quadratic_voting/src/: lib.rs
anchor_quadratic_voting/tests/: anchor_quadratic_voting.ts
anchor_vault/: Anchor.toml
anchor_vault/programs/anchor_vault/src/: lib.rs
anchor_vault/tests/: anchor_vault.ts
chain-post/: Anchor.toml  package.json  pnpm-lock.yaml
chain-post/programs/chain-post/: Cargo.toml
chain-post/programs/chain-post/src/: error.rs  lib.rs  metaplex_adapter.rs
chain-post/programs/chain-post/src/instructions/: buy_post_nft.rs  comment_post.rs  create_post.rs  delete_post.rs  initialize.rs  initialize_user.rs  mod.rs  tip_post.rs
chain-post/programs/chain-post/src/state/: comment_account.rs  mod.rs  platform_config.rs  post_account.rs  user_account.rs
chain-post/tests/: chain-post.ts
nft_marketplace/: Anchor.toml
nft_marketplace/programs/nft_marketplace/: Cargo.toml
nft_marketplace/programs/nft_marketplace/src/: error.rs  lib.rs
nft_staking/: Anchor.toml
nft_staking/programs/nft_staking/: Cargo.toml
nft_staking/programs/nft_staking/src/: error.rs  lib.rs
nft_staking/programs/nft_staking/src/state/: config.rs  (+3 more)
solana-starter/: package-lock.json  package.json  pnpm-lock.yaml
solana-starter/ts/: gill_nft_create.ts  pnpm-lock.yaml
solana-starter/ts/cluster1/: nft_image.ts  nft_metadata.ts  nft_mint.ts  spl_init.ts  spl_metadata.ts  spl_mint.ts  spl_transfer.ts
turbin3_builders_cohort_rs_task/: .gitignore  Cargo.toml
turbin3_builders_cohort_rs_task/src/: lib.rs
turbin3_builders_cohort_ts_task/: airdrop.ts  enroll.ts  keygen.ts  transfer.ts
turbin3_builders_cohort_ts_task/programs/: Turbin3_prereq.ts
(+20 files in other folders)
